changes and fixes